karvgo/rc-aspnet-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnet
  name: rcaspnet
  namespace: rc-namespace
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: rcaspnet
---
